Refine .gitignore to keep dataset config files while excluding model weights and checkpoint artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,14 @@ __marimo__/
 *.jpeg
 *.csv
 *.npy
+
+!ProcessedDataset/**/train_configs/*.yaml
+!ProcessedDataset/**/*.yaml
+!ProcessedDataset/**/*.txt
+!ProcessedDataset/**/.gitkeep
+
+# Ignore model weights and checkpoints
+*.pth
+*.pt
+checkpoints/
+**/checkpoints/*.pth
